--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <script type='text/javascript' src='js/dom-of-thrones.js'></script>
     <script type='text/javascript' src='js/scene1.js'></script>
+    <script type='text/javascript' src='js/scene2.js'></script>
+
+    </script>
     <script type='text/javascript' src='js/scene3.js'></script>
 
   </head>
